--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 
-exclude: [bower.json, GruntFile.js, package.json, js, node_modules]
+exclude: [bower.json, GruntFile.js, package.json, node_modules]
