--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "Blog",
   "version": "0.0.1-SNAPSHOT",
   "authors": [
-    "John Doe"
+    "Gérald Pereira"
   ],
   "description": "My Blog",
   "keywords": [
