--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,27 @@
 # Site settings
 title: Your awesome title
-email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://blog.geraldpereira.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
 
 exclude: [bower.json, GruntFile.js, package.json, node_modules]
+
+paginate: 6
+paginate_path: "/page/:num/"
+
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: rss
+    url : /feed.xml
+  - title: twitter
+    url: http://twitter.com/gerald__pereira
+  - title: linkedin
+    url: https://www.linkedin.com/profile/view?id=198651028
+  - title: github
+    url: https://github.com/geraldpereira
