--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "Jellly.io",
   "version": "0.0.1-SNAPSHOT",
   "description": "Load testing application",
-  "scripts": {
-  },
-  "config": {
-  },
+  "scripts": {},
+  "config": {},
   "keywords": [
     "Load test"
   ],
   "author": "Gérald Pereira",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bower-install-simple": "^0.9.3",
-    "grunt-wiredep": "^2.0.0",
-    "grunt-include-source": "~0.5.1"
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "~0.8.1",
+    "grunt-filerev": "~2.3.1",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-usemin": "~3.1.1",
+    "grunt-include-source": "~0.6.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-htmlmin": "~0.4.0",
+    "grunt-wiredep": "~2.0.0",
+    "grunt-contrib-uglify": "~0.9.2",
+    "grunt-contrib-cssmin": "~0.13.0",
+    "grunt-cache-bust": "~0.5.1",
+    "grunt-http-server": "~1.10.0",
+    "grunt-bower-install-simple": "~1.1.4"
   }
 }
