--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.1",
-    "grunt-filerev": "~2.3.1",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-usemin": "~3.1.1",
     "grunt-include-source": "~0.6.1",
@@ -21,8 +20,8 @@
     "grunt-wiredep": "~2.0.0",
     "grunt-contrib-uglify": "~0.9.2",
     "grunt-contrib-cssmin": "~0.13.0",
-    "grunt-cache-bust": "~0.5.1",
     "grunt-http-server": "~1.10.0",
-    "grunt-bower-install-simple": "~1.1.4"
+    "grunt-bower-install-simple": "~1.1.4",
+    "grunt-shell": "~1.1.2"
   }
 }
