--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,7 @@
   "overrides": {
     "font-awesome": {
       "main": [
-        "./css/font-awesome.css",
-        "./fonts/*"
+        "./css/font-awesome.css"
       ]
     }
   }
