--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   "overrides": {
     "font-awesome": {
       "main": [
-        "./css/font-awesome.css"
+        "css/font-awesome.css"
       ]
     }
   }
